# roundtrip

./: pyproject.toml
roundtrip/: app.py  route.py
roundtrip/static/: leaflet-sidepanel.css  script.js  style.css
roundtrip/templates/: index.html
