[tool.poetry]
name = "roundtrip"
version = "0.0.1"
description = "Generate round trip walking/hiking routes"
authors = ["Andrii Yurchuk <ay@mntw.re>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
flask = "^3.0.2"
environs = "^10.3.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.0"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[tool.mypy]
check_untyped_defs = true
show_none_errors = true
warn_return_any = true
warn_unused_ignores = true
show_column_numbers = true
strict_optional = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml"

[tool.coverage.run]
branch = true
omit = ["**/*/test*/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
